--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,17 @@
             "Orchestra\\Transporter\\": "src/"
         }
     },
+    "require": {
+        "illuminate/support": "~5.1"
+    },
     "require-dev": {
         "mockery/mockery": "0.9.*",
         "illuminate/database": "~5.1"
     },
-    "minimum-stability": "dev",
-    "require": {
-        "illuminate/support": "~5.1"
-    }
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.1-dev"
+        }
+    },
+    "minimum-stability": "dev"
 }
