--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         }
     },
     "require": {
-        "illuminate/support": "~5.1"
+        "illuminate/support": "~5.1.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
-        "illuminate/database": "~5.1"
+        "orchestra/testbench": "~3.1.0"
     },
     "extra": {
         "branch-alias": {
