Update readme and project description.
Signed-off-by: crynobone <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "orchestra/transporter",
+    "description": "Migration Toolkit: Creating ORM Compatible Structure from Legacy Database",
     "keywords": ["orchestra-platform", "orchestral", "laravel", "migration"],
     "license": "MIT",
     "authors": [
