--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     },
     "require": {
+        "php": ">=5.5.0",
         "illuminate/support": "~5.2.0"
     },
     "require-dev": {
